src/main/java/com/example/sqlvericek/Error/DateParseError/DateParseError.java
package com.example.sqlvericek.Error.DateParseError;

import com.example.sqlvericek.Error.ErrorsTypeModel.ErrorsType;

public class DateParseError {
    private ErrorsType errors;

    public ErrorsType getErrors() {
        return errors;
    }

    public void setErrors(ErrorsType value) {
        this.errors = value;
    }
}
